--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.1",
     "frappe-gantt": "^0.3.0",
+    "gantt-schedule-timeline-calendar": "2.6.8",
     "uuidv4": "^6.0.7",
     "vue": "^2.6.11",
+    "vue-gantt-schedule-timeline-calendar": "^1.0.33",
+    "vue-material": "^1.0.0-beta-13",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
