--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "deepmerge": "^4.2.2",
     "element-ui": "^2.13.1",
     "frappe-gantt": "^0.3.0",
     "gantt-schedule-timeline-calendar": "2.6.8",
